Exposed added, customers started

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 dependencies {
+    compile files('./exposed-0.10.1.jar')
+
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
+
     compile project(':software.hsharp.business.models')
     compile files('../software.hsharp.business.models/bin')
     compile project(':org.adempiere.base')
