--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ dependencies {
 
     compile project(':software.hsharp.business.models')
     compile files('../software.hsharp.business.models/bin')
-    compile project(':org.adempiere.base')
-    compile files('../org.adempiere.base/bin')
+
+    compile project(':org.compiere.crm')
+    compile files('../org.compiere.crm/bin')
+
 }
