--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,22 @@ dependencies {
     compile project(':org.compiere.crm')
     compile files('../org.compiere.crm/bin')
 
+    compile project(':org.compiere.process')
+    compile files('../org.compiere.process/bin')
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+}
+buildscript {
+    ext.kotlin_version = '1.2.41'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+apply plugin: 'kotlin'
+repositories {
+    mavenCentral()
 }
