--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    testCompile project(':software.hsharp.core.models')
+    compile files('../software.hsharp.core.models/bin')
 }
 buildscript {
     ext.kotlin_version = '1.2.41'
