login fixed WIP buildable WIP moving OSGi code to separate projects osgi moved away 3 ugly but works osgi moved away 2 osgi moved away 1 scripts enhanced

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     compile project(':org.compiere.process')
     compile files('../org.compiere.process/bin')
 
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
+
     testCompile project(':software.hsharp.core.models')
     compile files('../software.hsharp.core.models/bin')
 }
